fix(frontend): fix sidebar alignment in rtl

--- a/frontend/src/css/Sidebar.styl
+++ b/frontend/src/css/Sidebar.styl
@@ -140,6 +140,7 @@ sidebar-animate-speed = 0.5s
         & .label
           overflow hidden
           text-overflow ellipsis
+          unicode-bidi plaintext
       &__current
         padding-inline-start 0
         border-inline-start-style solid
